--- a/appbook.css
+++ b/appbook.css
@@ -23,6 +23,7 @@ body{
     width: 100vw;
     min-height: 100vh;
     background: var(---whiteColor);
+     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
