--- a/appbook.css
+++ b/appbook.css
@@ -41,10 +41,10 @@ header
 
 .navbar
 {
-    width: 80%;
+    width: 100%;
     display: flex;
     margin: auto;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     color: var(---whiteColor);
     flex-wrap: wrap;
