--- a/booking.css
+++ b/booking.css
@@ -1124,6 +1124,7 @@ border-bottom: 3px solid var(---whiteColor);
             font-size: 1.1rem;
             text-align: center;
             font-weight: 500;
+             text-align: justify;
         }
 
         .ratingbtn
