--- a/booking.css
+++ b/booking.css
@@ -1590,6 +1590,7 @@ gap: 5px;
         width: 100%;
         gap: 10px;
         height: max-content;
+           margin:.5rem 0rem;
         display: grid;
         grid-template-columns: repeat(2, 3fr);
 
