--- a/style.css
+++ b/style.css
@@ -42,10 +42,10 @@ header
 
 .navbar
 {
-    width: 80%;
+    width: 100%;
     display: flex;
     margin: auto;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     color: var(---whiteColor);
     flex-wrap: wrap;
@@ -171,7 +171,7 @@ border-radius: 10px;
     justify-content: space-around;
     align-items: center;
     /* background: blue; */
-    flex-wrap: wrap;
+/*     flex-wrap: wrap; */
     padding: 2rem 0;
     /* height: 100%; */
 }
@@ -180,10 +180,10 @@ border-radius: 10px;
 .drImage
 {
     /* width:50%; */
-    height: 50%;
+    height: 40%;
     text-align: center;
 
-    padding: 3rem 2rem;
+    padding: 2rem 2rem;
     justify-content:center;
     align-items: center;
     background:var(---secondaryColor);
@@ -1051,7 +1051,7 @@ gap: 15px;
 }
 
 
-/* @media screen and (min-width:1300px) */
+/* @media screen and (max-width:1350px) */
 
 
 
